Add tests for all commands.